--- a/.github/workflows/github-actions-walle.yml
+++ b/.github/workflows/github-actions-walle.yml
@@ -28,7 +28,7 @@ jobs:
         # Custom action for auto merging already available on marketplace
         uses: pascalgn/automerge-action@135f0bdb927d9807b5446f7ca9ecc2c51de03c4a
         # Perform the auto merge action only when the PR is raised by dependabot
-        if: github.actor == 'wall-e' || github.actor == 'wallyraju'
+        if: github.actor == 'wall-e' || github.actor == 'wallyraju' || github.actor == 'github-actions[bot]'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_ACTIONS_TOKEN }}
           # By default, whenever dependabot raises a PR, it automatically assigns a label named "dependencies"
