--- a/.github/workflows/github-actions-walle.yml
+++ b/.github/workflows/github-actions-walle.yml
@@ -2,7 +2,7 @@ name: Auto approve and merge PRs by dependabot
 
 # Trigger the workflow on pull request
 on:
-  pull_request
+  pull_request_target
 
 jobs:
   autoapprove:
