--- a/.github/workflows/github-actions-walle.yml
+++ b/.github/workflows/github-actions-walle.yml
@@ -30,7 +30,7 @@ jobs:
         # Perform the auto merge action only when the PR is raised by dependabot
         if: github.actor == 'wall-e' || github.actor == 'wallyraju' || github.actor == 'github-actions[bot]'
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_ACTIONS_TOKEN }}
+          GITHUB-TOKEN: ${{ secrets.GITHUB_ACTIONS_TOKEN }}
           # By default, whenever dependabot raises a PR, it automatically assigns a label named "dependencies"
           # So, this action merges those PRs labelled "dependencies" only
           MERGE_LABELS: dependencies
