--- a/.github/workflows/github-actions-walle.yml
+++ b/.github/workflows/github-actions-walle.yml
@@ -26,13 +26,12 @@ jobs:
     steps:
       - name: Auto merge
         # Custom action for auto merging already available on marketplace
-        uses: pascalgn/automerge-action@135f0bdb927d9807b5446f7ca9ecc2c51de03c4a
+        uses: "pascalgn/automerge-action@v0.16.3"
         # Perform the auto merge action only when the PR is raised by dependabot
         if: github.actor == 'wall-e' || github.actor == 'wallyraju' || github.actor == 'github-actions[bot]'
         env:
-          GITHUB_TOKEN : ${{ secrets.GITHUB_ACTIONS_TOKEN }}
+          GITHUB_TOKEN : "${{ secrets.GITHUB_TOKEN }}"
           # By default, whenever dependabot raises a PR, it automatically assigns a label named "dependencies"
           # So, this action merges those PRs labelled "dependencies" only
           MERGE_LABELS: dependencies
           MERGE_METHOD: rebase
-      
