--- a/.github/workflows/github-actions-walle.yml
+++ b/.github/workflows/github-actions-walle.yml
@@ -33,5 +33,5 @@ jobs:
           GITHUB_TOKEN : "${{ secrets.GITHUB_TOKEN }}"
           # By default, whenever dependabot raises a PR, it automatically assigns a label named "dependencies"
           # So, this action merges those PRs labelled "dependencies" only
-          MERGE_LABELS: dependencies
+          # MERGE_LABELS: dependencies
           MERGE_METHOD: rebase
